* important changes in version 1.54 10/09/2009
- Apply a patch from Niko Tyni (ntyni@debian.org) that resolves RT #48879;

    As seen in [rt.cpan.org #48879], although the recommended way of
    retrieving the last error is to use an instance method ($tar->error),
    the returned value is effectively global: an error in one Archive::Tar
    instance changes the error string of another instance.

    This change separates the error strings from each other while keeping
    the (deprecated) global value of $Archive::Tar::error pointing to the
    last error regardless of its instance.

    We also support calling error() as a class method (Archive::Tar->error).
    In this case it returns the global value, which matches the old behaviour.

* important changes in version 1.52 13/06/2009:
- Apply documentation patch to describe IBM APAR issue IZ50240; AIX tar
  does not always end a Tar archive with a 0x00 null block, which can 
  cause warnings from Archive::Tar.
  This is a documentation patch only, and users of 1.50 need not upgrade.

* important changes in version 1.50 12/06/2009:
- Apply patch in #46450: Support for --no-same-permissions style behavior
  This facilitates leaving the +x bit, while still applying your umask on
  the extracted file. 

* important changes in version 1.48 20/04/2009:
- Address #44680 (Improve error reporting on short corrupted archives)
  Archives of less than 512 bytes would not have a clear error string set
- Requires at least IO::Compres::* 2.015, to address: #43609: Memory 
  problem with A::T. Turns out 2.012 was leaking memory.

* important changes in version 1.46 05/03/2009:
- Address: bug #43513: [PATCH] Accept wrong checksums from SunOS and HP-UX tar
  like GNU tar does. See here for details:
  http://www.gnu.org/software/tar/manual/tar.html#SEC139
- make COMPRESS_BZIP and COMPRESS_GZIP constants actually work and fix their
  documentation

* important changes in version 1.44 19/01/2009: