@@ -1,6 +1,6 @@
 --- #YAML:1.0
 name:               Archive-Tar
-version:            1.54
+version:            1.56
 abstract:           Manipulates TAR archives
 author:
     - Jos Boumans <kane[at]cpan.org>
@@ -24,7 +24,7 @@ no_index:
     directory:
         - t
         - inc
-generated_by:       ExtUtils::MakeMaker version 6.54
+generated_by:       ExtUtils::MakeMaker version 6.56
 meta-spec:
     url:      http://module-build.sourceforge.net/META-spec-v1.4.html
     version:  1.4
